重新定义全局样式(与尚硅谷视频不一致, 移除@import引用，全局替换为@use)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 // index.scss (总入口文件)
-@import './variable';
-@import './normalize';
-@import './base';
-@import './typography';
-@import './utilities';
+
+@use './variable';
+@use './normalize';
+@use './base';
+@use './typography';
+@use './utilities';
