主页logo组件设置

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -5,3 +5,7 @@ $base-menu-width: 260px;
 $base-menu-bg-color:#001529;
 //顶部导航栏的高度
 $base-tabbar-height: 50px;
+//logo的宽度
+$base-logo-height: 50px;
+//logo后面文字的大小
+$base-logo-tital-fontsize:20px
